JSON load logic initial
Signed-off-by: VillageR88 <villager88pl@gmail.com>

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,32 +7,33 @@
     <meta name="description" content="Blog preview card">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon-32x32.png') }}" sizes="32x32" type="image/png">
+    <link rel="prefetch" href="https://www.frontendmentor.io/articles/{{ response.data[0].slug }}">
     <title>{{ siteTitle }}</title>
 </head>
 
 <body>
-    <nav></nav>
+    <nav>
+        <select onchange="handleChange()" id="titleDropdown">
+            <option value="" disabled>Select an article</option>
+        </select>
+    </nav>
     <main class="mainComponent">
-        <img width="336" height="201" class="image1"
-            src="{{ url_for('static', filename='images/illustration-article.svg') }}" alt="">
+        <img id="heroImage" width="336" height="201" class="image1"
+            src="{{ response.data[0].heroImage }}" alt="">
         <div class="secondDiv">
-            <h1 class="learning">{{ learning }}</h1>
-            <span class="published">{{ published_date }}</span>
-            <button type="button">
-                <span>{{ title }}</span>
-            </button>
-            <p>{{ description }}</p>
+            <h1 id="platform">{{ response.data[0].platform | join(', ') }}</h1>
+            <span id="publishedAt" class="published">{{ response.data[0].publishedAt }}</span>
+             <a href="https://www.frontendmentor.io/articles/{{ response.data[0].slug }}" id="title">{{ response.data[0].title }}</a>
+            <p id="description">{{ response.data[0].description }}</p>
         </div>
         <div class="thirdDiv">
-            <img class="image2" src="{{ url_for('static', filename='images/image-avatar.webp') }}" alt="">
-            <span class="nameSpan">{{ author }}</span>
+            <img id="publisherAvatar" class="image2" alt="">
+            <span id="publisherName" class="nameSpan"></span>
         </div>
     </main>
 </body>
 
-<script>
-    const data = {{ response| tojson }};
-    console.log(data);
-</script>
+<script>const data = {{ response | tojson }}.data;</script>
+<script src="{{ url_for('static', filename='dist/main.js') }}"></script>
 
 </html>
