--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -18,7 +18,6 @@ body {
   align-items: center;
   width: 384px;
   min-height: 100vh;
-  background-color: #f4d04e;
   overflow-x: hidden;
   box-sizing: border-box;
   font-family: "Figtree", sans-serif;
@@ -94,9 +93,7 @@ body:has(a:hover) > nav {
   justify-content: center;
   width: 82px;
   height: 29px;
-  background-color: #f4d04e;
   font-size: 14px;
-  color: black;
   font-weight: bolder;
   border-radius: 4px;
   line-height: 150%;
@@ -136,7 +133,7 @@ a:hover {
 }
 
 a:hover {
-  color: #f4d04e;
+  color: inherit;
 }
 
 p {
