--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -10,6 +10,12 @@
   font-display: swap;
 }
 
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 body {
   margin: auto;
   display: flex;
@@ -21,16 +27,18 @@ body {
   overflow-x: hidden;
   box-sizing: border-box;
   font-family: "Figtree", sans-serif;
+  gap: 24px;
+  padding: 24px;
 }
 
 nav {
+  width: 384px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
   background-color: white;
   box-shadow: 8px 8px 0px rgba(0, 0, 0, 1);
-  width: 100%;
   height: 100%;
   box-sizing: border-box;
   border-radius: 20px;
@@ -65,7 +73,6 @@ nav > select {
   gap: 24px;
   box-shadow: 8px 8px 0px rgba(0, 0, 0, 1);
   transition: 0.3s ease-in-out;
-  margin: 24px;
 }
 
 .mainComponent:has(a:hover) {
